# cataas-rs

./: CHANGELOG.md  Cargo.toml  Justfile  README.md
cataacli/: Cargo.toml  README.md
cataacli/src/: main.rs
cataas/: Cargo.toml  README.md
cataas/src/: client.rs  lib.rs  methods.rs  types.rs
cataas/src/client/: builder.rs  error.rs
cataas/src/methods/: cat.rs  mod.rs  says.rs
examples/: cat.rs  cat_with_tag.rs  tags.rs
src/: client.rs  lib.rs  types.rs
src/methods/: cat.rs  mod.rs  says.rs
