[workspace]
members = ["cataas", "cataacli"]

[workspace.package]
version = "0.0.2"
authors = ["Federico Damián Schonborn <fdschonborn@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/FedericoSchonborn/cataas-rs"
keywords = ["cataas", "kitty", "cat", "meow", "purr"]
edition = "2021"
