[package]
name = "cataacli"
description = "Cat as a Command Line Interface"
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive"] }
cataas = { version = "*", path = "../cataas" }
tokio = { version = "1.21.2", features = ["macros"] }
