[package]
name = "cataas"
description = "Cat as a Service API wrapper"
readme = "README.md"
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
thiserror = "1.0.37"
time = { version = "0.3.16", features = ["serde", "parsing"] }

[dev-dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.18", default-features = false, features = [
    "derive",
    "std",
    "help",
] }
tokio = { version = "1.21.2", features = ["macros"] }
